--- a/MunicipalTrashProgram/Content/Site.css
+++ b/MunicipalTrashProgram/Content/Site.css
@@ -1,6 +1,6 @@
 ﻿body {
     background-color: gainsboro;
-    background-color: rgba(75, 148, 81, 0.51);
+    background-color: rgb(229, 229, 229);
     padding-top: 50px;
     padding-bottom: 20px;
 }
