--- a/MunicipalTrashProgram/Views/Workers/Index.cshtml
+++ b/MunicipalTrashProgram/Views/Workers/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model MunicipalTrashProgram.Models.IndexViewModel
 
+
 @{
     ViewBag.Title = "Index";
 }
@@ -30,24 +31,52 @@
                 map: map,
                 title: 'Hello World!'
             });</text> }
-            @*var lineCoordinates = [
-                @foreach(var item in Model.programmed)
+            var lineCoordinates = [];
+            @foreach(var item in Model.programmed)
              {
-                <text> 
-                new google.maps.LatLng(@item.lat, @item.lng)
-                </text>
-             }
-            ];
-            var line = new google.maps.Polyline({
-                path: lineCoordinates,
-                geodesic: true,
-                strokeColor: '#FF0000',
-                strokeOpacity: 1.0,
-                strokeWeight: 2
-            });*@
+                <text>
+            @*//var latitude = parseFloat(@item.lat);
+            //var longitude = parseFloat(@item.lng);*@
+            
+            coordinates_array = new google.maps.LatLng(@item.lat, @item.lng);
+            lineCoordinates.push(coordinates_array);
+            @*//new google.maps.LatLng(@item.lat, @item.lng)*@
+            </text>
+             };
+            //var line = new google.maps.Polyline({
+            //    path: lineCoordinates,
+            //    geodesic: true,
+            //    strokeColor: '#FF0000',
+            //    strokeOpacity: 1.0,
+            //    strokeWeight: 2
+            //});
 
-            line.setMap(map);
-        }
+            //line.setMap(map);
+
+            var path = new google.maps.MVCArray();
+
+            var service = new google.maps.DirectionsService();
+ 
+            var poly = new google.maps.Polyline({ map: map, strokeColor: '#4986E7' });
+ 
+            for (var i = 0; i < lineCoordinates.length; i++) {
+                if ((i + 1) < lineCoordinates.length) {
+                    var src =  lineCoordinates[i];
+                    var des = lineCoordinates[i + 1];
+                    path.push(src);
+                    poly.setPath(path);
+                    service.route({
+                        origin: src,
+                        destination: des,
+                        travelMode: google.maps.DirectionsTravelMode.DRIVING
+                    }, function (result, status) {
+                        if (status == google.maps.DirectionsStatus.OK) {
+                            for (var i = 0, len = result.routes[0].overview_path.length; i < len; i++) {
+                                path.push(result.routes[0].overview_path[i]);
+                            }
+                        }
+                    });
+                }}}
     </script>
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3KoWWl0oYiaKZJBpRBR2lg8_LNH5FuNw&callback=initMap">
