added png to layout

--- a/MunicipalTrashProgram/Views/Home/About.cshtml
+++ b/MunicipalTrashProgram/Views/Home/About.cshtml
@@ -2,6 +2,6 @@
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>Kris and Nate are &nbsp;your average people that would like to help out the community.&nbsp;<br>We started this company in order to help those with a busy schedule and could not pick up trash<br>by themselves</h3>
+<h3>Kris and Nate are &nbsp;your average people that would like to help out the community. First and foremost, we're not some massive conglomerate that manages business from a remote corporate office. In the communities that we are located in, we also operate from there. This way, we have a better response time towards our customers. As a privately-held company, our focus is exclusively on our customers and employees.<br></h3>
 
 <p></p>
