--- a/MunicipalTrashProgram/Views/Shared/_Layout.cshtml
+++ b/MunicipalTrashProgram/Views/Shared/_Layout.cshtml
@@ -32,6 +32,10 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
+        <div class="image-container">
+
+            <img src="~/K&N-garbagetruck.png" />
+        </div>
         <footer>
             <p>© 2016 - K&amp;N Municipal Trash Pickup Application</p>
         </footer>
